// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-inputs/DropDown buttonPress 1`] = `
<View
  style={
    Object {
      "justifyContent": "center",
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "height": 48,
        "width": 200,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "#EEEFF1",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "space-between",
          "marginTop": 8,
          "opacity": 1,
          "paddingHorizontal": 12,
          "width": 200,
        }
      }
      testID="drop_down_button"
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/DropDown renders correctly 2 elements 1`] = `
<View
  style={
    Object {
      "justifyContent": "center",
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "height": 48,
        "width": 200,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "#EEEFF1",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "space-between",
          "marginTop": 8,
          "opacity": 1,
          "paddingHorizontal": 12,
          "width": 200,
        }
      }
      testID="drop_down_button"
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@npm/mobydick-inputs/DropDown renders correctly 5 elements 1`] = `
Array [
  <View
    style={
      Object {
        "justifyContent": "center",
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "height": 48,
          "width": 200,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#EEEFF1",
            "borderColor": "#EEEFF1",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "space-between",
            "marginTop": 8,
            "opacity": 1,
            "paddingHorizontal": 12,
            "width": 200,
          }
        }
        testID="drop_down_button"
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#20242D",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              undefined,
            ]
          }
        >
          SelectedItem
        </Text>
        <View
          style={false}
        >
          <Text
            style={
              Object {
                "color": "#5E6678",
                "fontFamily": "Neotis",
                "fontSize": 24,
              }
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>,
  ",",
]
`;

exports[`@npm/mobydick-inputs/DropDown renders correctly 30 elements 1`] = `
<View
  style={
    Object {
      "justifyContent": "center",
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "height": 48,
        "width": 200,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#EEEFF1",
          "borderColor": "#EEEFF1",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "space-between",
          "marginTop": 8,
          "opacity": 1,
          "paddingHorizontal": 12,
          "width": 200,
        }
      }
      testID="drop_down_button"
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;
